--- a/projectCode/sellerLogin.html
+++ b/projectCode/sellerLogin.html
@@ -13,6 +13,7 @@
     <div class="nav-container">
         <div class="w3-bar">
             <a href="homePage.html">Home</a>
+            <a href="sellerSignUp.html">Sign Up</a>
         </div>
     </div>
     <div class="login-container">
