--- a/projectCode/sellerSignUp.html
+++ b/projectCode/sellerSignUp.html
@@ -12,7 +12,7 @@
     </div>
     <div class="nav-container">
         <div class="w3-bar">
-            <a href="homePage.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
     </div>
     <div class="login-container">
