--- a/projectCode/buyerPage.html
+++ b/projectCode/buyerPage.html
@@ -15,7 +15,7 @@
     </div>
     <div class="nav-container">
         <div class="w3-bar">
-            <a href="homePage.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
     </div>
 
