--- a/projectCode/sellerSignUp.html
+++ b/projectCode/sellerSignUp.html
@@ -13,6 +13,7 @@
     <div class="nav-container">
         <div class="w3-bar">
             <a href="index.html">Home</a>
+            <a href="sellerLogin.html">Log in</a>
         </div>
     </div>
     <div class="login-container">
