new file:   projectCode/iBay-logo.png new file:   projectCode/login.css modified:   projectCode/sellerLogin.html

--- a/projectCode/sellerLogin.html
+++ b/projectCode/sellerLogin.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seller Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="header">
-        Seller Login
+        <div class="header-left"><a href="index.html"><img src="iBay-logo.png"></a></div>
+        <div class="header-center">iBay Login</div>
+        <div class="header-right"></div>
     </div>
-    <div class="nav-container">
-        <div class="w3-bar">
-            <a href="index.html">Home</a>
-            <a href="sellerSignUp.html">Sign Up</a>
-        </div>
-    </div>
+
     <div class="login-container">
         <h2>Login to Your Account</h2>
         <form method="POST" action="login.php">
@@ -25,6 +22,10 @@
             <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
         </form>
+        <p><a href="sellerSignUp.html">Sign up</a> instead</p>
+    </div>
+    <div class="footer">
+        Copyright @2025-25 iBay Inc. All rights reserved
     </div>
 </body>
 </html>
