modified:   projectCode/sellerLogin.html modified:   projectCode/sellerSignUp.html Small change to hyperlink navigation to better reflect wireframes

--- a/projectCode/sellerSignUp.html
+++ b/projectCode/sellerSignUp.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seller Sign up</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="header">
-        Seller Sign up 
-    </div>
-    <div class="nav-container">
-        <div class="w3-bar">
-            <a href="index.html">Home</a>
-            <a href="sellerLogin.html">Log in</a>
-        </div>
+        <div class="header-left"><a href="index.html"><img src="iBay-logo.png"></a></div>
+        <div class="header-center">iBay sign up</div>
+        <div class="header-right"></div>
     </div>
     <div class="login-container">
         <h2>Sign up to iBay</h2>
@@ -37,6 +33,10 @@
             <button type="submit">Login</button>
 
         </form>
+    </div>
+    <p><a href="sellerLogin.html">Log in</a> instead</p>
+    <div class="footer">
+        Copyright @2025-25 iBay Inc. All rights reserved
     </div>
 </body>
 </html>
