modified:   projectCode/buyerPage.html

--- a/projectCode/buyerPage.html
+++ b/projectCode/buyerPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <!--TODO: vanish sign up/login when user logs in (javascript,html), create working seach function(javascript,ajax), make button to apply filters work (javascript), 
-    align logo properly (javascript,css), create button to use search function(html,css)-->
+    align logo properly (javascript,css), create button to use search function(html,css) fix scroll bar (currently in wrong container and wrong direction)(html, css)-->
 <head>
 
     <meta charset="UTF-8">
