--- a/projectCode/index.html
+++ b/projectCode/index.html
@@ -12,7 +12,9 @@
         </script>
 </head>
 <body>
-    <h2><u>IBAY</u></h2>
+    <h2><div class="logo" style="text-align: center; margin-bottom: 20px;">
+        <a href="index.html"><img src="iBay-logo.png" style="max-width: 150px; height: auto;"></a>
+    </div></h2>
     <div class="nav-container">
         <div class="w3-bar">
             <a href="buyerPage.html" class="w3-bar-item w3-button">Browse</a>
