--- a/projectCode/buyerPage.html
+++ b/projectCode/buyerPage.html
@@ -111,7 +111,7 @@ document.addEventListener("DOMContentLoaded", function() {
         <div class="container">
             <div class="sidebar">
                 <div class="logo" style="text-align: center; margin-bottom: 20px;">
-                    <a href="index.html"><img src="iBay-logo.png" style="max-width: 150px; height: auto;"></a>
+                    <a href="index.php"><img src="iBay-logo.png" style="max-width: 150px; height: auto;"></a>
                 </div>
                 
                 <div class="search-options">
