--- a/projectCode/sellerPage.html
+++ b/projectCode/sellerPage.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-left"><a href="index.html"><img src="iBay-logo.png" alt="iBay Logo"></a></div>
+        <div class="header-left"><a href="index.php"><img src="iBay-logo.png" alt="iBay Logo"></a></div>
         <div class="header-center">Create a new listing</div>
         <div class="header-right"></div>
     </div>
