--- a/projectCode/sellerSignUp.html
+++ b/projectCode/sellerSignUp.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-left"><a href="index.html"><img src="iBay-logo.png"></a></div>
+        <div class="header-left"><a href="index.php"><img src="iBay-logo.png"></a></div>
         <div class="header-center">iBay sign up</div>
         <div class="header-right"></div>
     </div>
