--- a/projectCode/sellerPage.html
+++ b/projectCode/sellerPage.html
@@ -33,7 +33,7 @@
                     <select id="department" name="department" required>
                         <option value="">Select a department</option>
                         <option>Combo-dept</option>
-                        <option>Electronics</option>
+                        <option>Technology</option>
                         <option>Fashion</option>
                         <option>Home & Living</option>
                     </select>
