--- a/projectCode/sellerPage.html
+++ b/projectCode/sellerPage.html
@@ -35,7 +35,7 @@
                         <option>Combo-dept</option>
                         <option>Technology</option>
                         <option>Fashion</option>
-                        <option>Home & Living</option>
+                        <option>Home & Garden</option>
                     </select>
                 </div>
             </div>
