modified:   projectCode/buyerPage.html

--- a/projectCode/buyerPage.html
+++ b/projectCode/buyerPage.html
@@ -136,7 +136,7 @@ document.addEventListener("DOMContentLoaded", function() {
             </div>
         </div>
     
-        <div class="footer" style="margin-top: 20px; text-align: center; padding: 10px; background: #f1f1f1;">
+        <div class="footer">
             Copyright @2025-25 iBay Inc. All rights reserved
         </div>
     </body>
