--- a/projectCode/buyerPage.html
+++ b/projectCode/buyerPage.html
@@ -102,16 +102,18 @@
                     items.forEach(item => {
                         html += `
                             <div class="result-card">
-                                <div class="image-container">
-                                    <img src="${item.image}" alt="${item.title}">
-                                </div>
-                                <div class="content">
-                                    <h4>${item.title}</h4>
-                                    <p class="category"><strong>Department:</strong> ${item.category}</p>
-                                    <p class="time-remaining"><strong>Time remaining:</strong> ${formatTime(item.time_remaining * 3600)}</p>
-                                    <p class="price"><strong>Price:</strong> £${item.price} (+ £${item.postage} postage)</p>
-                                    <p class="location"><strong>Location:</strong> ${item.location}</p>
-                                </div>
+                                <a href="itemDetails.php?id=${item.itemId}" class="result-link">
+                                    <div class="image-container">
+                                        <img src="${item.image}" alt="${item.title}">
+                                    </div>
+                                    <div class="content">
+                                        <h4>${item.title}</h4>
+                                        <p class="category"><strong>Department:</strong> ${item.category}</p>
+                                        <p class="time-remaining"><strong>Time remaining:</strong> ${formatTime(item.time_remaining * 3600)}</p>
+                                        <p class="price"><strong>Price:</strong> £${item.price} (+ £${item.postage} postage)</p>
+                                        <p class="location"><strong>Location:</strong> ${item.location}</p>
+                                    </div>
+                                </a>
                             </div>
                         `;
                     });
@@ -122,6 +124,7 @@
                 // Append the new results below the search bar
                 container.appendChild(resultsDiv);
             }
+
         
             document.addEventListener("DOMContentLoaded", function() 
             {
