--- a/projectCode/buyerPage.html
+++ b/projectCode/buyerPage.html
@@ -166,7 +166,7 @@
                     <select id="department" name="department" required>
                         <option value="">Select a department</option>
                         <option value="Technology">Technology</option>
-                        <option value="Clothing">Clothing</option>
+                        <option value="Fashion">Fashion</option>
                         <option value="Home & Garden">Home & Garden</option>
                     </select>
                     <label for="price-range">Price Range:</label>
