updated search to work with new db 	modified:   projectCode/buyerPage.html 	modified:   projectCode/search.php

--- a/projectCode/buyerPage.html
+++ b/projectCode/buyerPage.html
@@ -110,7 +110,9 @@
                                         <h4>${item.title}</h4>
                                         <p class="category"><strong>Department:</strong> ${item.category}</p>
                                         <p class="time-remaining"><strong>Time remaining:</strong> ${formatTime(item.time_remaining * 3600)}</p>
-                                        <p class="price"><strong>Price:</strong> £${item.price} (+ £${item.postage} postage)</p>
+                                        <p class="price">
+                                        <strong>Starting Price:</strong> £${item.price} <br>
+                                        <strong>Current Bid:</strong> £${item.currentBid ?? item.price} (+ £${item.postage} postage)</p>
                                         <p class="location"><strong>Location:</strong> ${item.location}</p>
                                     </div>
                                 </a>
