--- a/projectCode/sellerLogin.html
+++ b/projectCode/sellerLogin.html
@@ -16,8 +16,8 @@
     <div class="login-container">
         <h2>Login to Your Account</h2>
         <form method="POST" action="login.php">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
