--- a/projectCode/sellerLogin.html
+++ b/projectCode/sellerLogin.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-left"><a href="index.php"><img src="iBay-logo.png"></a></div>
+        <div class="header-left"><a href="index.php"><img src="iBay-logo.png" alt="iBay logo"></a></div>
         <div class="header-center">iBay Login</div>
         <div class="header-right"></div>
     </div>
 
     <div class="login-container">
         <h2>Login to Your Account</h2>
+        <div id="error-message" class="error-message"></div>
         <form method="POST" action="login.php">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
@@ -23,9 +24,39 @@
             <button type="submit">Login</button>
         </form>
     </div>
+
     <p><a href="sellerSignUp.html">Sign up</a> instead</p>
+
     <div class="footer">
         Copyright @2025-25 iBay Inc. All rights reserved
     </div>
+
+    <script>
+        const params = new URLSearchParams(window.location.search);
+        const error = params.get("error");
+        const errorDiv = document.getElementById("error-message");
+
+        if (error) {
+            let message = "";
+            switch (error) {
+                case "empty":
+                    message = "Please enter both email and password.";
+                    break;
+                case "invalid":
+                    message = "Incorrect password. Please try again.";
+                    break;
+                case "notfound":
+                    message = "Email not registered.";
+                    break;
+                case "invalidemail":
+                    message = "Please enter a valid email address.";
+                    break;
+                case "server":
+                    message = "Server error. Please try again later.";
+                    break;
+            }
+            errorDiv.textContent = message;
+        }
+    </script>
 </body>
 </html>
