--- a/projectCode/sellerSignUp.html
+++ b/projectCode/sellerSignUp.html
@@ -12,25 +12,33 @@
         <div class="header-center">iBay sign up</div>
         <div class="header-right"></div>
     </div>
+
     <div class="login-container">
         <h2>Sign up to iBay</h2>
+
+        <!-- signup form -->
         <form method="POST" action="signUp.php" id="signupForm">
+            <!-- username -->
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required />
             <div class="error" id="usernameError">Username must be at least 4 characters.</div>
 
+            <!-- password -->
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
             <div class="error" id="passwordError">Password must be at least 4 characters.</div>
 
+            <!-- email -->
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required />
             <div class="error" id="emailStatus">Checking email...</div>
 
+            <!-- address -->
             <label for="address">Address</label>
             <input type="text" id="address" name="address" required />
             <div class="error" id="addressError">Address must be at least 5 characters.</div>
 
+            <!-- postcode -->
             <label for="postcode">Postcode</label>
             <input type="text" id="postcode" name="postcode" required />
             <div class="error" id="postcodeError">Postcode must be 5–8 characters, letters and numbers only.</div>
@@ -38,15 +46,20 @@
             <button type="submit">Sign up</button>
         </form>
     </div>
+
     <p><a href="sellerLogin.html">Log in</a> instead</p>
+
     <div class="footer">
         Copyright @2025-25 iBay Inc. All rights reserved
     </div>
 
     <script>
+        // hide all error messages initially
         document.querySelectorAll('.error').forEach(el => el.style.display = 'none');
+
         const form = document.getElementById('signupForm');
 
+        // field validators
         const inputs = {
             username: {
                 el: document.getElementById('username'),
@@ -70,6 +83,7 @@
             },
         };
 
+        // realtime input validation
         Object.values(inputs).forEach(input => {
             input.el.addEventListener('input', () => {
                 const value = input.el.value.trim();
@@ -83,6 +97,7 @@
             });
         });
 
+        // on submit: validate all fields
         form.addEventListener('submit', (e) => {
             let isValid = true;
             Object.values(inputs).forEach(input => {
@@ -93,49 +108,51 @@
                     isValid = false;
                 }
             });
-            if (!isValid) e.preventDefault();
+            if (!isValid) e.preventDefault(); // stop if invalid
         });
+
+        // email check logic
         const emailInput = document.getElementById('email');
         const emailStatus = document.getElementById('emailStatus');
         let emailCheckTimeout;
 
         emailInput.addEventListener('input', () => {
-        clearTimeout(emailCheckTimeout);
-        const email = emailInput.value.trim();
+            clearTimeout(emailCheckTimeout);
+            const email = emailInput.value.trim();
 
-        // Only show feedback if user has typed something
-        if (email === "") {
-            emailStatus.style.display = 'none';
-            emailInput.classList.remove('valid');
-            emailStatus.textContent = ""; // Clear message
-            return;
-        }
+            // reset if empty
+            if (email === "") {
+                emailStatus.style.display = 'none';
+                emailInput.classList.remove('valid');
+                emailStatus.textContent = "";
+                return;
+            }
 
-        // Start checking email availability
-        emailStatus.style.display = 'block';
-        emailStatus.style.color = "black";
-        emailStatus.textContent = "Checking email...";
+            // debounce check
+            emailStatus.style.display = 'block';
+            emailStatus.style.color = "black";
+            emailStatus.textContent = "Checking email...";
 
-        emailCheckTimeout = setTimeout(() => {
-            fetch(`checkEmail.php?email=${encodeURIComponent(email)}`)
-                .then(response => response.json())
-                .then(data => {
-                    if (data.taken) {
-                        emailStatus.textContent = "Email already in use.";
-                        emailStatus.style.color = "red";
-                        emailInput.classList.remove('valid');
-                    } else {
-                        emailStatus.textContent = "Email is available.";
-                        emailStatus.style.color = "green";
-                        emailInput.classList.add('valid');
-                    }
-                })
-                .catch(err => {
-                    emailStatus.textContent = "Error checking email.";
-                    emailStatus.style.color = "orange";
-                });
-        }, 500); // Debounced
-    });
+            emailCheckTimeout = setTimeout(() => {
+                fetch(`checkEmail.php?email=${encodeURIComponent(email)}`)
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.taken) {
+                            emailStatus.textContent = "Email already in use.";
+                            emailStatus.style.color = "red";
+                            emailInput.classList.remove('valid');
+                        } else {
+                            emailStatus.textContent = "Email is available.";
+                            emailStatus.style.color = "green";
+                            emailInput.classList.add('valid');
+                        }
+                    })
+                    .catch(err => {
+                        emailStatus.textContent = "Error checking email.";
+                        emailStatus.style.color = "orange";
+                    });
+            }, 500);
+        });
     </script>
 </body>
 </html>
