Minor validation tweak to sellerPage 	modified:   projectCode/sellerPage.html

--- a/projectCode/sellerPage.html
+++ b/projectCode/sellerPage.html
@@ -41,7 +41,7 @@
             <!-- description -->
             <div class="form-group">
                 <label for="description">Item Description (max 1000 characters)</label>
-                <textarea id="description" name="description" rows="4"></textarea>
+                <textarea id="description" name="description" rows="4" maxlength="1000"></textarea>
                 <div id="desc-counter">0 / 1000</div>
             </div>
 
