Updated site to work with new categories needed fo r test data 	modified:   projectCode/buyerPage.php 	modified:   projectCode/index.php 	modified:   projectCode/search.php 	modified:   projectCode/sellerPage.html 	modified:   projectCode/sellerPage.php

--- a/projectCode/sellerPage.html
+++ b/projectCode/sellerPage.html
@@ -29,11 +29,17 @@
                     <label for="department">Department</label>
                     <select id="department" name="department" required>
                         <option value="">Select a department</option>
-                        <option>Technology</option>
-                        <option>Fashion</option>
+                        <option>Books</option>
+                        <option>Clothing</option>
+                        <option>Computing</option>
+                        <option>DvDs</option>
+                        <option>Electronics</option>
+                        <option>Collectables</option>
                         <option>Home & Garden</option>
+                        <option>Music</option>
+                        <option>Outdoors</option>
                         <option>Toys</option>
-                        <option>Sports</option>
+                        <option>Sports Equipment</option>
                     </select>
                 </div>
             </div>
